--- a/templates/emails/reset-password.html.twig
+++ b/templates/emails/reset-password.html.twig
@@ -4,8 +4,5 @@
 <a href="{{ WEBSITE_ROOT }}/?action=reset_password&token={{ token }}">
     {{ 'EMAIL_RESET_PASSWORD_LINK_TEXT' | trans }}
 </a>
-<br />
-<br />
-<br />
-{{ 'EMAIL_SIGNATURE' | trans | raw }}<br />
-<img width="400" src="{{ WEBSITE_ROOT }}/logo_petit.png" />
+
+{{ include('emails/footer.html.twig') }}
