--- a/templates/emails/bookstore-approved.html.twig
+++ b/templates/emails/bookstore-approved.html.twig
@@ -10,8 +10,5 @@
 {% endif %}
 <br />
 {{ 'EMAIL_BOOKSTORE_APPROVED_THANKS' | trans }}<br />
-<br />
-<br />
 
-{{ 'EMAIL_SIGNATURE' | trans | raw }}<br />
-<img width="400" src="{{ WEBSITE_ROOT }}/logo_petit.png" />
+{{ include('emails/footer.html.twig') }}
