Update dm.net image URLs

--- a/templates/emails/reset-password.html.twig
+++ b/templates/emails/reset-password.html.twig
@@ -1,7 +1,7 @@
 {{ 'EMAIL_HELLO' | trans({'%userName%': user.username}) }}<br />
 {{ 'EMAIL_RESET_PASSWORD_BODY' | trans({'%email%': user.email}) | raw }}<br />
 
-<a href="{{ WEBSITE_ROOT }}/?action=reset_password&token={{ token }}">
+<a href="{{ WEBSITE_ROOT }}/forgot/{{ token }}">
     {{ 'EMAIL_RESET_PASSWORD_LINK_TEXT' | trans }}
 </a>
 
