Update Discord link

--- a/templates/emails/footer.html.twig
+++ b/templates/emails/footer.html.twig
@@ -6,5 +6,5 @@
 {{ 'EMAIL_SOCIAL_NETWORKS' | trans }}<br />
 <a href="https://www.facebook.com/DucksManager"><img src="{{ WEBSITE_ROOT }}/build/images/icons/facebook.png" /></a>&nbsp;
 <a href="https://www.instagram.com/ducksmanager"><img src="{{ WEBSITE_ROOT }}/build/images/icons/instagram.png" /></a>&nbsp;
-<a href="https://discord.gg/aAqKyH"><img src="{{ WEBSITE_ROOT }}/build/images/icons/discord.png" /></a>&nbsp;
+<a href="https://discord.gg/z959xaejJm"><img src="{{ WEBSITE_ROOT }}/build/images/icons/discord.png" /></a>&nbsp;
 <a href="https://www.youtube.com/user/ducksmanager"><img src="{{ WEBSITE_ROOT }}/build/images/icons/youtube.png" /></a>
